<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorText"
    tools:context="com.lumex.bluetoothproject.MainActivity">

    <ImageView
        android:id="@+id/iv_main_logo"
        android:layout_centerInParent="true"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:background="@drawable/main_logo"
        android:layout_marginBottom="62dp"
        />

    <Button
        android:id="@+id/btn_main_config"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:text="@string/config"
        android:textColor="@color/colorText"
        android:textSize="18dp"
        android:layout_marginBottom="24dp"/>
    <Button
        android:id="@+id/btn_main_command"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:text="@string/command"
        android:textColor="@color/colorText"
        android:textSize="18dp"
        android:layout_marginBottom="24dp"/>
    <Button
        android:id="@+id/btn_main_graphic"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:text="@string/graphic"
        android:textColor="@color/colorText"
        android:textSize="18dp"/>
</LinearLayout>
